--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ kafka-producer-test/gradle
 kafka-producer-test/gradlew
 kafka-producer-test/gradlew.bat
 kafka-producer-test/.gradle
+kafka-producer-test/.idea
